# c4c

./: .gitattributes  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  build.rs  t.sh
docs/conformance/: archimate-3.1-to-3.2-delta.md  archimate-3.2-registry-audit.md  archimate-3.2-support.md
examples/: internet-banking.dsl
out-archi/: workspace.archimate
out-archi-m83/: workspace.archimate
out-archi-m84/: workspace.archimate
out-archi-m85/: workspace.archimate
out-archi-strict/: workspace.archimate
out-archimate/: workspace.archimate.xml
out-drawio/: components.drawio  container.drawio  containers.drawio  context.drawio  deployment.drawio  flow.drawio  landscape.drawio  system-context.drawio
out-html/: index.html
out-html/assets/: style.css
out-html/decisions/: 0001-adr-0001.html  0002-adr-0002.html  0003-adr-0003.html  0004-adr-0004.html  0005-adr-0005.html  index.html
out-html/docs/: index.html
out-json/: workspace.json
out-m86-mini/: m86-mini.archi-sidecar.json  m86-mini.dsl
out-open-group-archimate/: workspace.archimate.xml
out-opengroup-m85/: workspace.archimate.xml
src/: archi_native.rs  compiler.rs  diagnostic.rs  documentation.rs  exporters.rs  handwritten_parser.rs  lexer.rs  main.rs  parser.rs  preprocessor.rs  source.rs  tree_sitter_parser.rs
tests/fixtures/: invalid-relationship.dsl  m3-core.dsl  m3-deployment.dsl  m3-extension-base.dsl  m3-extension.dsl  m3-json-extension.dsl  m3-remove-relationship.dsl  (+30 more)
tree-sitter-structurizr-dsl/: README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
(+28 files in other folders)
