[package]
name = "c4c"
version = "0.1.0"
edition = "2021"
description = "Local Structurizr DSL compiler prototype"
license = "MIT"

[dependencies]
quick-xml = "0.38.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.25.10"
tree-sitter-language = "0.1.5"

[build-dependencies]
cc = "1.2"
